Change Developer Team

--- a/Sh1rga Watch Watch App/Sh1rga Watch Watch App.entitlements
+++ b/Sh1rga Watch Watch App/Sh1rga Watch Watch App.entitlements
@@ -11,7 +11,7 @@
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.tsg0o0.sh1rga</string>
+		<string>group.com.tsg0o0.sh1rgagroup</string>
 	</array>
 </dict>
 </plist>
