--- a/Sh1rga/Sh1rga.entitlements
+++ b/Sh1rga/Sh1rga.entitlements
@@ -13,7 +13,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.tsg0o0.sh1rga</string>
+		<string>group.com.tsg0o0.sh1rgagroup</string>
 	</array>
 	<key>com.apple.security.network.client</key>
 	<true/>
